<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <TextView
        android:id="@+id/main_page_title"
        android:layout_width="239dp"
        android:layout_height="63dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/main_page_title"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/enter_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/enter_your_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_input"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:background="@android:drawable/edit_text" />

    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_button_label"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/calculator_button_quiz"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_calculator_button_label"
        android:layout_marginTop="100dp"/>


</LinearLayout>